[tool.poetry]
name = "workload-generator"
version = "0.1.0"
description = "Simulating the arrival of tasks and data partitions into a system."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
